@@ -37,6 +37,7 @@
         exmpp_session,
         exmpp_ssl,
         exmpp_tcp@COMPAT_MODULES_START@
+        @COMPAT_MODULES@ejabberd_socket,
         @COMPAT_MODULES@ejabberd_zlib,
         @COMPAT_MODULES@jlib,
         @COMPAT_MODULES@stringprep,
